fix some text-alignment issues in game over modal

--- a/assets/css/modal/root.css
+++ b/assets/css/modal/root.css
@@ -78,7 +78,9 @@
     width: 100%;
 
     div {
-      &.para {
+      &.move-count,
+      &.para,
+      &.bot-score {
         text-align: center;
 
         &.highlighted {
